--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,27 @@
   box-sizing: border-box;
 }
 
+h1{ 
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+h2{
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+  padding: 15px;
+  margin-bottom: 0;   
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
 header{
   position: fixed;
   width: 100vw;
@@ -12,5 +33,15 @@ header{
 
 main{
   padding-top: 100px;
-  min-height: calc(100vh - 210px);
+  min-height: calc(100vh - 200px);
+}
+
+footer{
+  margin-top: 20px;
+  padding: 15px;
+  width: 100%;
+  background-color: black;
+  color: white;
+  font-size: 12px;
+  font-family: sans-serif;
 }
