--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,18 +1,84 @@
-h1{ 
-    font-family: 'Oswald', sans-serif;
+.itemListContainer h1{ 
+    font-size: 25px;
+    padding: 5px 10px;   
+  }
+
+.itemListContainer h5{ 
     text-align: center;
-    font-size: 22px;
-    padding: 20px;   
+    font-size: 18px;
+    padding: 10px 15px 5px;   
+    margin-bottom: 0;
 }
 
-@media (min-width:425px){
-    h1 {
-        font-size: 30px;  
+.itemListContainer span{
+    display: block;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.isLoading{
+    text-align: center;
+}
+
+.loading{
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    margin: auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.itemList{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    margin: auto;
+    gap: 10px;
+    padding: 0 15px;
+}
+
+@media (min-width:375px){
+    .itemListContainer h1 {
+        padding: 15px 10px;  
     }
 }
 
 @media (min-width:768px){
-    h1 {
+
+    .itemListContainer h1 {
         font-size: 40px;  
+        padding: 20px 10px;
+    }
+
+    .itemListContainer h5 {
+        font-size: 25px;  
+    }
+
+    .itemList{
+        width: 650px;
+        grid-template-columns: repeat(2, 1fr);        
     }
 }
+
+@media (min-width:992px){
+    .itemList{
+        width: 992px;
+        grid-template-columns: repeat(3, 1fr);        
+    }
+}
+
+@media (min-width:1200px){
+    .itemList{
+        width: 1200px;
+        grid-template-columns: repeat(4, 1fr); 
+
+    }
+}
+
